2000-11-04 14:45 UTC+0800 Ron Pinkas <ron@profit-master.com>

   * include/hbexpra.c
   * source/pp/pptable.c
     ! Excluded Ryszard changes using #if[n]def SIMPLEX from SimpLex version.
       Ryszard code remains intact for Flex version (including 3 reported bugs).

   * hb_slex.bc
     + Added -DSIMPLEX when compiling source/pp/pptable.c, source/compiler/expropta.c, and source/macro/macroa.c
       /* This allow conditional exclusion of Ryszard changes for SimpLex version. */

     /* Todo - have to do same in GNU make */

2000-11-04 11:17 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * makefile.bc
     Added missing dependancy of source/rtl/tgetint.prg

   * source/rtl/tgetint.prg
     ! Improved __GETA() - No longer uses slow function calls to traverse array.
       bSetGet much faster because it no longer traverses base array every time bSetGet is evaluated,
       because final array dimension is now compiled into the bSetGet :-)
     - Removed no longer needed __GetAValue(

   * tests/testread.prg
     + Added multi dimension GET test.

2000-11-04 13:35 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    +source/rtl/tgetint.prg
    *source/rtl/tget.prg
    *hb_slex.bc
    *makefile.bc
    *makefile.vc
    *source/rtl/Makefile
        + tgetint.prg a new file with GetNew(), __GET() and __GETA()
         functions moved here from tget.prg
        * __GET() and __GETA() both create a set/get codeblock on the
         fly with no macro compilation and with no memvar variables
        * the first argument of __GET() have to be passed by a reference
         if simple variable is used and set/get codeblock is not
         specified

    *include/hbapi.h
    *include/hbapiitm.h
        * added hb_itemIncRef/hb_itemDecRef declarations
        * added hb_codeblockIncRef/hb_codeblockDecRef

    *include/hbrddcdx.h
        * added a few more comments
        * added a forward declaration of _CDXTAG structure

    *source/vm/codebloc.c
    *source/vm/itemapi.c